--- a/other/exercises/exercises.org
+++ b/other/exercises/exercises.org
@@ -438,6 +438,10 @@ CLOSED: [2015-06-05 Fri 20:54]
 : (2, 'no')
 
 ** 13 Sorting
+  data = ["test", "extralongline", "randomline", "abcdd"]
+
+  def long_sort(sequence):
+      
 *** DONE 3 Least Distance Sorting
 CLOSED: [2015-06-05 Fri 20:42]
 #+BEGIN_SRC python :results output
@@ -755,10 +759,30 @@ CLOSED: [2015-06-05 Fri 20:33]
       # 16 Minimize distance in three sorted arrays. Distance[i,j,k] = maximum
       # distance between any two with A[i], B[j], C[k]. Return triple i,j,k so
       # that distance is minimum.
-      # def min_3_dist(arrays):
-      #     def get_dist(arrays, indices):
-      #         return ma
-
+      @staticmethod
+      def min_3_distance(arrays):
+          def find_distance(indices):
+              a, b, c = tuple([arrays[k][indices[k]] for k in range(len(indices))])
+              distance = abs(a - c) + abs(a - b) + abs(b - c)
+              return distance
+          current_indices = [0, 0, 0]
+          min_indices = [0, 0, 0]
+          finished = [False, False, False]
+          min_distance = find_distance(min_indices)
+          while(1):
+              temp1 = [(x, arrays[x][current_indices[x]]) for x in range(len(arrays))]
+              temp2 = [x for x in temp1 if not finished[x[0]]]
+              min_index = min(temp2, key=lambda x: x[1])[0]
+              current_indices[min_index] += 1
+              if len(arrays[min_index]) - 1 == current_indices[min_index]:
+                  finished[min_index] = True
+              distance = find_distance(current_indices)
+              if distance < min_distance:
+                  distance = min_distance
+                  min_indices = list(current_indices)
+              if all(finished):
+                  break
+          return min_indices
        
   test_bst = node([5, [1], [7]])
   test_bst_2 = node([5, [2, [1]], [7, None, [9]]])
@@ -829,7 +853,19 @@ CLOSED: [2015-06-05 Fri 20:33]
 
   def test_range_query():
       assert bst_141.range_query(11, 20) == [11, 13, 17, 19]
-      
+
+  def test_min_3_distance():
+      array1 = [1, 3, 5, 7, 8]
+      array2 = [2, 3, 6, 78, 90]
+      array3 = [3, 4, 5, 6, 7, 8, 9]
+      array4 = [1, 2, 4, 7, 24]
+      array5 = [70, 72, 74, 76, 78]
+      assert node.min_3_distance([array1, array2, array3]) == [3, 2, 3]
+      assert node.min_3_distance([array1, array2, array4]) == [0, 0, 0]
+      assert node.min_3_distance([array1, array2, array5]) == [3, 2, 0]
+
+
+
   test_is_bst([test_bst, test_bst_2, bst_141, bst_142])
   test_successor(bsts)
   test_search()
@@ -840,6 +876,7 @@ CLOSED: [2015-06-05 Fri 20:33]
   test_largest_elements()
   test_lowest_common_ancestor()
   test_descendant_and_ancestor()
+  test_min_3_distance()
 #+END_SRC
 ** 15 Meta-algorithms
 *** DONE Mergesort
